--- a/Install.html
+++ b/Install.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Install App</title>
-<link rel="stylesheet" href="https://appinstallerios.com/main.css">
+<link rel="stylesheet" href="https://appinstallerios.com/MetricInstaller/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="https://appinstallerios.com/manifest.json">
 <meta name="description" content="AppInstaller iOS Is A Tweaked AppStore For iOS Devices">
