--- a/Install.html
+++ b/Install.html
@@ -16,8 +16,8 @@
 <center>
 <a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppleZone.plist">
 <div class="top-app">
-<img class="banner" src="Img/AppInstalleriOSBanner.png">
-<img class="icon" src="https://icons.appinstallerios.com/AppInstalleriOSIcon.png">
+<img class="banner" src="https://appinstallerios.com/Img/AppInstalleriOSBanner.png">
+<img class="icon" src="https://icons.appinstallerios.com/AppZoneIcon.png">
 <h1>Appinstaller iOS</h1>
 <p>Tap To Install</p>
 </div>
