--- a/Install.html
+++ b/Install.html
@@ -16,7 +16,7 @@
 <center>
 <a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppleZone.plist">
 <div class="top-app">
-<img class="banner" src="https://appinstallerios.com/Img/AppZoneBanner.png">
+<img class="banner" src="https://appinstallerios.com/Img/Banner.png">
 <img class="icon" src="https://icons.appinstallerios.com/AppZoneIcon.png">
 <h1>Appinstaller iOS</h1>
 <p>Tap To Install</p>
