--- a/Install.html
+++ b/Install.html
@@ -17,8 +17,8 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppleZone.plist">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/Banner.png">
-<img class="icon" src="https://icons.appinstallerios.com/AppZoneIcon.png">
-<h1>Appinstaller iOS</h1>
+<img class="icon" src="AppZoneIcon.png">
+<h1>AppleZone</h1>
 <p>Tap To Install</p>
 </div>
 </a>
