--- a/Install.html
+++ b/Install.html
@@ -17,7 +17,7 @@
 <a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppleZone.plist">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/Banner.png">
-<img class="icon" src="AppZoneIcon.png">
+<img class="icon" src="AppleZoneIcon.png">
 <h1>AppleZone</h1>
 <p>Tap To Install</p>
 </div>
