--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <center>
 <a href="https://useapplezone.com/Install">
 <div class="top-app">
-<img class="banner" src="Img/AppInstalleriOSBanner.png">
-<img class="icon" src="https://icons.appinstallerios.com/AppInstalleriOSIcon.png">
+<img class="banner" src="https://appinstallerios.com/Img/Banner.png">
+<img class="icon" src="AppleZoneIcon.png">
 <h1>Apple Zone</h1>
 <p>Go To Install Page</p>
 </div>
