--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </a>
 <br>
 </noscript>
-<a href="https://appinstallerios.com/IPA/AppleZone.ipa">
+<a href="https://appinstallerios.com/AppCenter/AppleZone.ipa">
 <div class="iOS">
 Get IPA
 </div>
